2010-06-16  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: better control over constant string class
	* configure: regenerate
	Don't allow build if compiler doesn't let us set the constant string
	class ... unless explicitly overridden (add warning).
	Explicitly deprecate ffcall

2010-06-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSInvocation: For portability, use NSPageSize() to find
	size for page alignment.
	* Source/NSString.m: Raise exception on pul pointer passed to
	+stringWithCString:encoding: as per OSX.
	* Source/Additions/GSXML.m: Fix minor memory leak
	* Source/NSArray.m: ([-valueForKey:]) for for @count

2010-06-15 Riccardo Mottola

	* Source/NSInvocation:
	Protect page-aligned and unprotect before freeing.

2010-06-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/Unicode.m: Fix indirect through null pointer.

2010-06-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSNumber.m: Fix breakage of +numberWith... in subclasses.

2010-06-12  Yavor Doganov

	* Source/NSZone.m:
	* Source/GSPThread.h:
	* Source/objc-load.h:
	* Source/objc-load.m:
	* Source/NSException.m:
	* Source/ObjectiveC2/sync.m:
	* Source/NSString.m:
	* Source/NSDecimalNumber.m:
	* Source/NSDecimal.m:
	* Source/NSLock.m:
	* configure.ac: Use autoconf AC_USE_SYSTEM_EXTENSIONS
	* configure: Regenerate
	* Headers/Additions/GNUstepBase/config.h.in: Regenerate
	Simplification of source code by using autoconf to enable extensions
	for Unix98 thread handling etc.

2010-06-11 Riccardo Mottola

	* Source/NSZone.m
	* Source/GSPThread.h
	* Source/NSLock.m
	* Source/ObjectiveC2/sync.m: Attempt of fixing test for defining
	_XOPEN_SOURCE again

2010-06-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSSocketPortNameServer.m: Improve automated gdomap startup log
	* configure.ac: Don't install gdomap setuid by default.
	* configure: regenerate

2010-06-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Raise exception if a null pointer is passed to